--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,19 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 pyyaml = "^6.0.1"
+pandas = "^2.1.4"
+matplotlib = "^3.8.2"
 
+
+[tool.poetry.group.codlegigle.dependencies]
+pylint = "^3.0.3"
+flake8 = "^7.0.0"
+
+
+[tool.poetry.group.pruebas.dependencies]
+pytest = "^7.4.4"
+pytest-cov = "^4.1.0"
+mypy = "^1.8.0"
 
 [build-system]
 requires = ["poetry-core"]
