--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,15 @@
 [flake8]
-ignore = E251
+ignore = E999
 max-line-length = 120
 max-complexity = 10
+
+[tool:pytest]
+addopts = --doctest-modules tests 
+    --cov-config .coveragerc 
+    --cov-report term-missing 
+    --cov-report html 
+    --cov apolo11/
+    --cov-fail-under 60
+python_files = tests/*/*.py
+filterwarnings =
+    ignore::FutureWarning
