--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 pyyaml = "^6.0.1"
 pandas = "^2.1.4"
+pydantic = "^2.5.3"
 
 
 [tool.poetry.group.codlegigle.dependencies]
