--- a/settings/configuration_file.yaml
+++ b/settings/configuration_file.yaml
@@ -31,7 +31,7 @@ device_type:
 
 file_quantity:
             - 1
-            - 10
+            - 100
 
 # Formato de fecha utilizado por la aplicacion para la generacion de los datos
 date_format: '%Y%m%d%H%M%S'
@@ -40,3 +40,6 @@ date_format: '%Y%m%d%H%M%S'
 # debe ser un valor numérico
 
 number_digits: 4 
+
+# Cantidad de filas por archivo
+rows_file: 1
